--- a/Styles.css
+++ b/Styles.css
@@ -346,6 +346,23 @@ body {
     font-size: 0.9em;
     color: #e0e0e0;
 }
+.footer .social-media {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 0;
+}
+
+.footer .social-media li a {
+    color: #fff;
+    font-size: 1.5em;
+    text-decoration: none;
+}
+
+.footer .social-media li a:hover {
+    color: #7D3C98;
+}
 
 .footer a {
     color: #00bfa5;
@@ -413,4 +430,7 @@ body {
     width: 100%;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+}
+.strong{
+    color: #66fcf1; 
 }
